crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_match_guard.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@match x { A if ) => <b/> }</p>"
---
alder::syntax

  × I was expecting a condition for this markup match guard
   ╭─[/project/src/main.ald:1:32]
 1 │ let value = <p>@match x { A if ) => <b/> }</p>
   ·                ┬               ┬
   ·                │               ╰── expected an expression
   ·                ╰── this `@match` starts here
   ╰────
