crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_match_scrutinee.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@match ) {}</p>"
---
alder::syntax

  × I was expecting a value after `@match`
   ╭─[/project/src/main.ald:1:23]
 1 │ let value = <p>@match ) {}</p>
   ·                ┬      ┬
   ·                │      ╰── expected an expression
   ·                ╰── this `@match` starts here
   ╰────
