crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_mismatch.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let value = <div></span>
---
alder::syntax

  × this closing tag does not match: expected `</div>`, found `</span>`
   ╭─[/project/src/main.ald:1:20]
 1 │ let value = <div></span>
   ·             ┬      ──┬─
   ·             │        ╰── mismatched closing tag
   ·             ╰── this markup starts here
   ╰────
  help: check the tag spelling and nesting; close the innermost element first
