crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_stray_else.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@else {}</p>"
---
alder::syntax

  × this `@else` has no preceding `@if`
   ╭─[/project/src/main.ald:1:16]
 1 │ let value = <p>@else {}</p>
   ·             ┬  ┬
   ·             │  ╰── unexpected `@else`
   ·             ╰── this markup starts here
   ╰────
  help: place `@else { ... }` directly after an `@if` branch
