crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_unclosed.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let value = <div><p>x
---
alder::syntax

  × I was expecting `</p>` to close this element at the end of the file
   ╭─[/project/src/main.ald:1:22]
 1 │ let value = <div><p>x
   ·                  ┬
   ·                  ╰── this element starts here
   ╰────
